Prevent scrollbar from move body page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -73,3 +73,14 @@ html {
     background-color: var(--bs-primary, #0d6efd) !important;
     color: #fff !important;
 }
+
+body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+@supports (overflow-x: clip) {
+  body {
+    overflow-x: clip;
+  }
+}
